# practice_app

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: settings.py  urls.py  wsgi.py
mainsite/: admin.py  forms.py  models.py  rating_logic.py  serializers.py  urls.py  views.py
mainsite/migrations/: 0001_initial.py  0002_codeexamples_deposit_eulerproblem_portfolio_stock_and_more.py  0002_post_approved_comment.py  0003_alter_post_title.py  0003_auto_20211028_1741.py  0003_portfolio_invested.py  0004_alter_portfolio_invested.py  0004_post_publication_date.py  0005_userpostrelation.py  0006_post_like.py  0007_auto_20211103_0740.py  0008_post_is_liked.py  0009_auto_20211103_0853.py  0010_auto_20211103_0901.py  0011_auto_20211103_0917.py  0012_auto_20211104_1139.py  0013_auto_20220216_1615.py  0014_stock.py  0015_auto_20220217_0824.py  0016_auto_20220217_0838.py  0017_stock_title.py  0018_remove_stock_invested.py  0019_auto_20220217_0852.py  0020_stock_profit.py  0021_stock_end_value.py  0022_portfolio.py  0023_auto_20220217_1004.py  0024_auto_20220217_0930.py  0025_portfolio_asset_type.py  0026_alter_portfolio_asset_type.py  0027_auto_20220218_1105.py
mainsite/services/: services_code_example.py  services_investment.py
mainsite/static/css/: base.css  blog.css  eulers_problems.css  programmig.css
mainsite/templates/: app_list.html  base.html  home_page.html
mainsite/templates/blog/: add_comment_to_post.html  comment_edit.html  main_blog.html  post_detail.html  (+1 more)
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat  django-admin.py
(+13 files in other folders)
