[tool.poetry]
name = "practice_app"
version = "0.1.0"
description = ""
authors = ["Eldar  <MuratovER@stud.kai.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.4.1"
Django = "3.2.8"
pytz = "2021.3"
sqlparse = "0.4.2"
djangorestframework = "^3.13.1"
Markdown = "^3.3.6"
django-filter = "^21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
